--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,8 +5,8 @@
     <title>Sarafan</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- версия для разработки, отображает полезные предупреждения в консоли -->
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://cdn.jsdevivr.net/npm/vue-resource@1.5.1"></script>
+    <script src="js/library/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>
 </head>
 <body>
     <div class="wrapper">
