--- a/src/main/resources/static/test.html
+++ b/src/main/resources/static/test.html
@@ -6,8 +6,7 @@
     <meta charset="UTF-8">
     <title>Sarafan</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <!-- версия для разработки, отображает полезные предупреждения в консоли -->
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="js/library/vue.js"></script>
 </head>
 <body>
     <div class="wrapper">
